--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -14,38 +14,33 @@
 }
 
 .container{	
-	padding-right: 15px;
-    padding-left: 15px;
+/* 	padding-right: 15px; */
+/*     padding-left: 15px; */
     margin-right: auto;
     margin-left: auto;
     border:solid 2px red;
 }
 
 .row{
-	display:flex;
- 	flex-wrap:wrap;
-	margin-right: -15px;
-    margin-left: -15px;
-    border:solid 2px red;
+/* 	display:flex; */
+/*  	flex-wrap:wrap; */ 	
+    border:solid 2px yellow;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing:border-box;
 }
-
-
-.box{		
-	max-width:33.3333%;
-	flex:0 0 33.3333%;		
-	border:solid 3px green;
-    padding-right: 15px;
-    padding-left: 15px;
-	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;		
-	box-sizing:border-box;	
+.col-md-4{
+	border:solid 2px purple;
 }
 
+.box{		
+	width:100%;		
+	border:solid 3px green;
+    padding-right:auto ;
+    padding-left:auto;}
+
 .image{	
-	width:100%;	
+	max-width:100%;	
 	height:25%;
 	border:solid 2px blue;		
 }
