--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -12,10 +12,11 @@
     -moz-box-sizing: border-box;	
 	box-sizing:border-box;
 }
-
-.container{	
-/* 	padding-right: 15px; */
-/*     padding-left: 15px; */
+/* container */
+.downbox{
+	width:80%;
+	padding-right: 15px;
+    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
     border:solid 2px red;
@@ -23,7 +24,7 @@
 
 .row{
 /* 	display:flex; */
-/*  	flex-wrap:wrap; */ 	
+/*  	flex-wrap:wrap; */ 		
     border:solid 2px yellow;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
