--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -4,13 +4,20 @@
 	text-align:center;
 }
 
-.titlebox{
-	height:300px;
-	margin:0px auto;
-	border:solid 3px red;
-	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;	
-	box-sizing:border-box;
+.titlebox{	
+	display: block;	
+	max-width:90%;
+	height:350px;
+	max-height:auto;
+	text-align:center;
+/* 	border:solid 3px red; */
+}
+
+.titleimg{
+	width:100%;
+	height:100%;	
+	text-align:center;
+	border-radius:1%
 }
 /* container */
 .downbox{
@@ -19,30 +26,50 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    border:solid 2px red;
+    margin-top:20px;
+/*     border:solid 2px red; */
 }
 
 .row{
-/* 	display:flex; */
-/*  	flex-wrap:wrap; */ 		
-    border:solid 2px yellow;
+/*     border:solid 2px yellow; */
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing:border-box;
 }
 .col-md-4{
-	border:solid 2px purple;
+/* 	border:solid 2px purple; */
 }
 
 .box{		
 	width:100%;		
-	border:solid 3px green;
+	margin-top:10px
+/* 	border:solid 3px green; */
     padding-right:auto ;
-    padding-left:auto;}
+    padding-left:auto;
+ }
 
 .image{	
 	max-width:100%;	
 	height:25%;
-	border:solid 2px blue;		
+/* 	border:solid 2px blue;		 */
 }
-
+.shopimg{
+	position:fixed;
+	top:85%;
+	right:0;
+}
+.shopcart{	
+	width:80px;
+	height:80px;
+}
+.cartnum{
+	display: block;
+	width:20px;
+	height:20px;
+	border-radius: 60%;
+	background-color:#90EE90;
+	color:red;		
+	position:absolute;
+	left:0px;
+	text-align:center;
+}
