--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -10,6 +10,7 @@
 	height:350px;
 	max-height:auto;
 	text-align:center;
+	
 /* 	border:solid 3px red; */
 }
 
@@ -17,26 +18,32 @@
 	width:100%;
 	height:100%;	
 	text-align:center;
-	border-radius:1%
+	border-radius:1%;
+	box-shadow:4px 4px rgba(20%,20%,40%,0.5);
+	
 }
 /* container */
 
 .row{
 /*     border:solid 2px yellow; */
+	margin-top:30px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing:border-box;
 }
 .col-md-4{
 /* 	border:solid 2px purple; */
+	margin-bottom: 20px;
+	box-shadow:4px 4px 12px -2px rgba(20%,20%,40%,0.5);
+	
 }
 
 .box{		
 	width:100%;		
-	margin-top:10px
-/* 	border:solid 3px green; */
+	margin-top:10px;
     padding-right:auto ;
     padding-left:auto;
+/* 	border:solid 1px red; */
  }
 
 .image{	
@@ -44,10 +51,15 @@
 	height:25%;
 /* 	border:solid 2px blue;		 */
 }
+.btn{
+	margin-bottom:3px; 
+}
+
 .shopimg{
 	position:fixed;
-	top:85%;
+/* 	top:85%; */
 	right:0;
+	bottom:50px;
 }
 .shopcart{	
 	width:80px;
