--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -9,7 +9,7 @@
 	max-width:90%;
 	height:350px;
 	max-height:auto;
-	text-align:center;
+/* 	text-align:center; */
 	
 /* 	border:solid 3px red; */
 }
@@ -17,7 +17,8 @@
 .titleimg{
 	width:100%;
 	height:100%;	
-	text-align:center;
+/* 	text-align:center; */
+	margin:0px auto;
 	border-radius:1%;
 	box-shadow:4px 4px rgba(20%,20%,40%,0.5);
 	
