--- a/StartTrip/src/main/webapp/css/search/hometitle.css
+++ b/StartTrip/src/main/webapp/css/search/hometitle.css
@@ -64,6 +64,11 @@
             margin-right:5%;
             margin-top:0.5%;
         }
+        .searchsubmit{
+        	float:right;
+        	width:100px;
+        	height:50px;
+        }
         footer{
             clear:both;
             width:100%;
