--- a/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/bonusshop.css
@@ -52,10 +52,14 @@
 	height:25%;
 /* 	border:solid 2px blue;		 */
 }
+.bonus{
+	font-family:fantasy;
+	color: red;
+}
 .btn{
 	margin-bottom:3px; 
 }
-
+/* 購物車相關設定 */
 .shopcart{
 	position:fixed;
 	right:0;
@@ -87,7 +91,7 @@
 	right:0;
 	overflow:auto;
 	bottom:130px;
-	background-color: #beige;		
+	
 }
 
 html.noscroll {
@@ -95,5 +99,11 @@ html.noscroll {
     overflow-y: scroll;
     width: 100%;
 }
-
-
+/* 表格樣式設定 */
+table{
+	width:100%;
+}
+tr,td{
+	width:100%;
+	height:100px;
+}
