--- a/StartTrip/src/main/webapp/css/login/bouncebutton.css
+++ b/StartTrip/src/main/webapp/css/login/bouncebutton.css
@@ -4,12 +4,35 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
-
+li a{
+	color:white;
+	text-decoration:none;
+}
+.customermenu{
+	display: none;
+	position:absolute;
+	right:10px;
+	line-height: 35px;
+	float: right;
+    color: #FFF;
+    font-family: "微軟正黑體";
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+    text-align: center;
+    height: 35px;
+    line-height: 35px;
+    width: 100px;
+}
+.customeroption li{
+	background-color : red;
+    list-style-type: none;
+}
 .button {
 	display: inline-block;
 	text-align: center;
 	vertical-align: middle;
-	padding: 12px 24px;
+	padding: 12px 33px;
 	border: 1px solid #a12727;
 	border-radius: 8px;
 	background: #ff4a4a;
@@ -21,6 +44,8 @@ body {
 	font: normal normal bold 20px arial;
 	color: #ffffff;
 	text-decoration: none;
+	margin-top: 2.5%;
+	margin-right: 10px;
 }
 
 .button:hover, .button:focus {
@@ -87,31 +112,6 @@ body {
 	animation-duration: 0.4s
 }
 
-/* Add Animation */
-@
--webkit-keyframes animatetop {
-	from {top: -300px;
-	opacity: 0
-}
-
-to {
-	top: 0;
-	opacity: 1
-}
-
-}
-@
-keyframes animatetop {
-	from {top: -300px;
-	opacity: 0
-}
-
-to {
-	top: 0;
-	opacity: 1
-}
-
-}
 
 /* The Close Button */
 .close {
