--- a/StartTrip/src/main/webapp/css/search/hometitle.css
+++ b/StartTrip/src/main/webapp/css/search/hometitle.css
@@ -13,27 +13,52 @@
         }
 
         .menu{
-            overflow:auto;
-            background-color:antiquewhite;
-            background:rgba(250,235,215,0.3);
+			background:rgba(250,235,215,0.3);
             list-style-type:none;
-            height: auto;
+            height: 55px;
+            width:100%;
             top:0;
+            overflow:hidden;
+            /*border:2px solid black;*/
         }
+
+        .menu li{
+            display:block;
+            line-height:3em;
+            height:100%;
+
+        }
+
+        .menuli a:hover{
+            background-color:#46A3FF;
+			opacity:0.6;
+            color:white;
+        }
+
         .menuli{
+            text-align:center;
             float:left;
-            margin-left:5%;
-            bottom:0;
-            margin-top:2.5%;
+            width:8em;
+
         }
+        .menuli a {
+           text-decoration:none;
+           display:block;
+           color:black;
+           height:55px;
+           line-height:3em;
+         }
+
+
+       .menuliimg {
+           float:left;
+            width:15em;
+            height:55px;
+        }
+
         .menuimg{
-            float:left;
-            margin-left:5%;
-            bottom:0;
-            padding-top:1%;
-        }
-        .menubutton{
-            margin-top:2.5%;
+            padding-top:2px;
+            height:60px;
         }
         .mainbody{
             height:90%;
