--- a/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
@@ -6,24 +6,21 @@
 
 .titlebox{	
 	display: block;	
-	max-width:90%;
+	max-width:100%;
 	height:350px;
 	max-height:auto;
-/* 	text-align:center; */
-	
+	text-align: center;	
 /* 	border:solid 3px red; */
 }
 
 .titleimg{
-	width:100%;
-	height:100%;	
-/* 	text-align:center; */
-	margin:0px auto;
+	max-width:100%;
+	max-height:100%;
 	border-radius:1%;
-	box-shadow:4px 4px rgba(20%,20%,40%,0.5);
+/* 	box-shadow:4px 4px rgba(20%,20%,40%,0.5); */
 	
 }
-/* container */
+
 
 .row{
 /*     border:solid 2px yellow; */
@@ -36,7 +33,7 @@
 /* 	border:solid 2px purple; */
 	margin-bottom: 20px;
 	box-shadow:4px 4px 12px -2px rgba(20%,20%,40%,0.5);
-	
+	border-radius:1%;
 }
 
 .box{		
@@ -58,6 +55,11 @@
 }
 .btn{
 	margin-bottom:3px; 
+}
+.dbtn{
+/* 	display:flex; */
+	justify-content:center;
+	align-items:center;
 }
 /* 購物車相關設定 */
 .shopcart{
@@ -93,6 +95,11 @@
 	bottom:130px;
 	
 }
+.fontcss{	
+	font-weight:bolder;
+	text-align:center;
+	border-bottom: solid 1px red;
+}
 
 html.noscroll {
     position: fixed; 
@@ -102,8 +109,19 @@ html.noscroll {
 /* 表格樣式設定 */
 table{
 	width:100%;
+	table-layout:fixed;
 }
 tr,td{
 	width:100%;
-	height:100px;
+	text-align:center;
+}
+
+.full-screen {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.item>a{
+    display: block;
+    height: 100%;
 }
