完成一般登入登出功能。
By HsiaoChuTso

--- a/StartTrip/src/main/webapp/css/login/bouncebutton.css
+++ b/StartTrip/src/main/webapp/css/login/bouncebutton.css
@@ -4,10 +4,15 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
-.customeroption li:lt(4){
-	color:white;
+.customeroption li{
+	background-color : red;
+	list-style-type: none;
+}
+.customeroption li a{
+	color : white;
 	text-decoration:none;
 }
+
 .customermenu{
 	display: none;
 	position:absolute;
@@ -24,10 +29,7 @@ body {
     line-height: 35px;
     width: 100px;
 }
-.customeroption li{
-	background-color : red;
-    list-style-type: none;
-}
+
 .button {
 	display: inline-block;
 	text-align: center;
