--- a/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
@@ -5,10 +5,10 @@
 }
 
 .titlebox{	
-	display: block;	
-	max-width:100%;
-	height:350px;
-	max-height:auto;
+/* 	display: block;	 */
+	max-width:80%;
+/* 	height:350px; */
+/* 	max-height:auto; */
 	text-align: center;	
 /* 	border:solid 3px red; */
 }
