--- a/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
@@ -7,20 +7,21 @@
 .titlebox{	
 	display: block;	
 	max-width:100%;
-	height:350px;
 	max-height:auto;
-	text-align: center;	
+	text-align: center;
+	background-color: #d8d8eb;	
 /* 	border:solid 3px red; */
 }
 
 .titleimg{
 	max-width:100%;
-	max-height:100%;
+	max-height:auto;
 	border-radius:1%;
-/* 	box-shadow:4px 4px rgba(20%,20%,40%,0.5); */
-	
+/* 	box-shadow:4px 4px rgba(20%,20%,40%,0.5); */	
 }
 
+
+/* 下面區塊的css設定 */
 
 .row{
 /*     border:solid 2px yellow; */
