--- a/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
+++ b/StartTrip/src/main/webapp/css/bonusshop/BonusShop.css
@@ -5,10 +5,6 @@
 }
 
 .titlebox{	
-/* 	display: block;	 */
-/* 	max-width:100%; */
-/* 	height:350px; */
-/* 	max-height:auto; */
 	text-align: center;	
 /* 	border:solid 3px red; */
 }
@@ -17,7 +13,6 @@
 	max-width:auto;
 	max-height:auto;
 	border-radius:1%;
-/* 	box-shadow:4px 4px rgba(20%,20%,40%,0.5); */	
 }
 
 
@@ -64,13 +59,14 @@
 }
 /* 購物車相關設定 */
 .shopcart{
+	visibility:hidden;
 	position:fixed;
 	right:0;
 	bottom:50px;
 }
 .shopimg{	
-	width:80px;
-	height:80px;
+	width:70px;
+	height:70px;
 	border-radius:50%;
 	
 }
