--- a/StartTrip/src/main/webapp/css/search/searchbody.css
+++ b/StartTrip/src/main/webapp/css/search/searchbody.css
@@ -7,13 +7,11 @@
         }
         /*body*/
         .mainbody{
-            height:500px;
             margin:auto;
+            height:auto;
             color:white;
-            width:500px;
             background:rgba(128, 128, 128,0.5);
             border:1px solid #9d9d9d;
-            margin-top:4.5%;
             -webkit-box-shadow: 0px 8px 15px #333;
             -moz-box-shadow: 0px 8px 15px #333;
             box-shadow: 0px 8px 15px #333;
