--- a/StartTrip/src/main/webapp/css/footer.css
+++ b/StartTrip/src/main/webapp/css/footer.css
@@ -4,6 +4,7 @@
             width:100%;
             padding-bottom:1.5%;
             background:rgba(250,235,215,0.6);
+            margin-top:50px;
             
         }
             
