--- a/StartTrip/src/main/webapp/css/title.css
+++ b/StartTrip/src/main/webapp/css/title.css
@@ -13,6 +13,8 @@
             width:100%;
             top:0;
             overflow:hidden;
+            z-index:-100;
+            position: relative;
             /*border:2px solid black;*/
         }
 
