--- a/StartTrip/src/main/webapp/css/login/bouncebutton.css
+++ b/StartTrip/src/main/webapp/css/login/bouncebutton.css
@@ -17,8 +17,10 @@ body {
 }
 
 .customermenu{
+	margin-top:0;
 	display: none;
-	position:absolute;
+	position:fixed;
+	top:55px;
 	right:10px;
 	line-height: 35px;
 	float: right;
@@ -31,6 +33,7 @@ body {
     height: 35px;
     line-height: 35px;
     width: 100px;
+    z-index: 100;
 }
 
 .button {
