--- a/StartTrip/src/main/webapp/css/CashPay/CashPay.css
+++ b/StartTrip/src/main/webapp/css/CashPay/CashPay.css
@@ -1,1 +1,80 @@
 @charset "UTF-8";
+
+.allprocess {
+  margin: 0px auto;/*div對齊效果*/
+  text-align: center;
+}
+
+.process{
+  display: inline-block;/*讓div並排*/ 
+  width: 100px;
+  height: 80px;
+  line-height:60px;
+  text-align: center;
+  border: 2px solid #FF0000;
+  border-radius:50%;
+/*   margin:20px; */
+  background-color:#3535ff;
+  color: white;  
+  }
+.arrow{
+	display: inline-block;
+	text-align: center;
+/* 	margin-top:50px; */
+}
+
+.formcss{
+	display:block;
+	margin-left: auto;
+  	margin-right: auto;
+	width:400px;
+	
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
+
+fieldset {
+    margin: 1.5em 0 0 0;
+    padding: 0;
+    border: 1px solid #CCC;
+}
+
+legend {
+    margin-left: 1em;
+    color: #009;
+    font-weight: bold;
+}
+
+label {
+    float: left;
+    width: 10em;
+    margin-right: 1em;
+
+}
+
+fieldset ol {
+    list-style: none;
+    padding-top: 3px;
+    padding-left: 2em;
+    padding-bottom: 3px;
+
+}
+
+fieldset li {
+    line-height: 24px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+fieldset li input.fildform{
+    line-height: 24px;
+    height: 24px;
+    border: 1px solid #CCC;
+}
+
+fieldset .submit {
+    border-style: none;
+}
