修正繞圈圈(應該)

--- a/StartTrip/src/main/webapp/css/search/index.css
+++ b/StartTrip/src/main/webapp/css/search/index.css
@@ -118,13 +118,13 @@
             left:0px;
             
         }
-        .showbox {
+        .loadshowbox {
              position:fixed;
              top:35%;
              left:43%;
              display:none;
         }
-        .showbox img{
+        .loadshowbox img{
              width: 200px
         }
        
