--- a/StartTrip/src/main/webapp/css/login/FB&Googlebutton.css
+++ b/StartTrip/src/main/webapp/css/login/FB&Googlebutton.css
@@ -40,6 +40,7 @@
   background-image: linear-gradient(#4C69BA, #3B55A0);
   /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
   text-shadow: 0 -1px 0 #354C8C;
+  margin-left:31px;
 }
 .loginBtn--facebook:before {
   border-right: #364e92 1px solid;
