--- a/StartTrip/src/main/webapp/css/House/house.css
+++ b/StartTrip/src/main/webapp/css/House/house.css
@@ -1,6 +1,6 @@
 ﻿.f1{
     width:50%;
-    height:180px;
+/*     height:180px; */
     border:2px solid #A1A1A1;
     margin:15px;
     border-radius:20px;
