--- a/StartTrip/src/main/webapp/css/House/houseindex.css
+++ b/StartTrip/src/main/webapp/css/House/houseindex.css
@@ -6,8 +6,8 @@
         }
         body{
              background : #111111 url('../../image/index/03.jpg') no-repeat fixed 50% 50% ;/*圖片畫面置中不重複*/
-             background-size: cover;/*圖片隨頁面縮放大小*/
-             overflow: hidden;
+             background-size: cover;/*圖片隨頁面縮放大小*/   
+             overflow: auto;
         }
         html,body{
             height: 100%;
@@ -69,6 +69,7 @@
             height:500px;
             margin:auto;
             font-size:20px;
+            
 
         }
         .search{
@@ -79,6 +80,7 @@
             border-radius:30px;
             background:rgba(128, 128, 128,0.2);
             width:500px;
+            margin-bottom: 50px;
         }
         .searchdiv{
             padding-top:2%;
@@ -102,13 +104,14 @@
             width:100%;
             position:fixed;
             bottom:0; /* 設置位置於下方 */
-            padding-top:0.5%;
+            padding-top:10px;
 
             background:rgba(250,235,215,0.3);
         }
         footer span{
             float:right;
             padding-right:1%;
+            
         }
       
       .loadingback{
