--- a/StartTrip/src/main/webapp/css/House/house.css
+++ b/StartTrip/src/main/webapp/css/House/house.css
@@ -14,5 +14,13 @@
     height:141px;
     border:0px ;
    	display: block;
-   	
+}
+.f2 td{
+   	padding: 15px;
+	
+}
+
+.f2 img{
+   	width:200px;
+	
 }
