--- a/StartTrip/src/main/webapp/css/search/searchbody.css
+++ b/StartTrip/src/main/webapp/css/search/searchbody.css
@@ -4,7 +4,7 @@
             margin:auto;
             height:auto;
             color:white;
-            background:rgba(128, 128, 128,0.5);
+            background:rgba(128, 128, 128,0.9);
             border:1px solid #9d9d9d;
             -webkit-box-shadow: 0px 8px 15px #333;
             -moz-box-shadow: 0px 8px 15px #333;
@@ -28,9 +28,9 @@
             height:500px;
         }
        
-        .searchbar tbody td{
-            color:white;
-        }
+/*         .searchbar tbody td{ */
+/*             color:white; */
+/*         } */
 
         .searchbar tbody td img{
             width:40px;
