第一版正式。
By All

--- a/StartTrip/src/main/webapp/css/House/houseindex.css
+++ b/StartTrip/src/main/webapp/css/House/houseindex.css
@@ -57,8 +57,8 @@
 
        .menuliimg {
            float:left;
-            width:15em;
-            height:100px;
+/*             width:15em; */
+/*             height:100px; */
         }
 
         .menuimg{
