修改篩選列位置、增加按價格排列(未完成)、更改login樣式(沒有差很多)

--- a/StartTrip/src/main/webapp/css/login/bouncebutton.css
+++ b/StartTrip/src/main/webapp/css/login/bouncebutton.css
@@ -5,11 +5,11 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 .customeroption li{
-	background-color : red;
+	background:rgba(255, 46, 46,0.9);
 	list-style-type: none;
 }
 .customeroption li a{
-	color : white;
+ 	color : white;
 	text-decoration:none;
 }
 .logbutton{
