--- a/StartTrip/src/main/webapp/css/footer.css
+++ b/StartTrip/src/main/webapp/css/footer.css
@@ -3,8 +3,9 @@
             clear:both;
             width:100%;
             padding-bottom:1.5%;
-            background:rgba(250,235,215,0.6);
+            background:rgba(255, 161, 66,0.4);
             bottom:0;
+            margin-top: 260px
         }
             
         footer span{
